--- a/css/style.css
+++ b/css/style.css
@@ -2,9 +2,13 @@ body {
   font-family: 'Inter', sans-serif;
 }
 
-.navbar {
+.container {
   max-width: 870px;
   width: 100%;
+  margin: auto;
+}
+
+.navbar {
   margin: 0 auto;
   display: flex;
   align-items: center;
@@ -29,4 +33,73 @@ body {
 
 .nav-link.active {
   font-weight: 700;
+}
+
+.header {
+  padding: 70px 0;
+  display: flex;
+  align-items: center;
+}
+
+.header-text {
+  margin-right: 27px;
+}
+
+.header-strong {
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 125%;
+  letter-spacing: -0.03em;
+  color: #211B12;
+}
+
+.header-geading {
+  margin-top: 8px;
+  margin-bottom: 24px;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 135%;
+  letter-spacing: -0.02em;
+}
+
+.header-primary {
+  color: #BF7506;
+}
+
+.social-list {
+  list-style: none;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+}
+
+.social-link {
+  display: inline-block;
+  padding: 8px;
+}
+
+.header-links {
+  display: flex;
+  align-items: center;
+}
+
+.cv-download {
+  display: flex;
+  align-items: center;
+  padding: 7px 8px;
+  margin-left: 60px;
+  text-decoration: none;
+  border-bottom: 2px solid #BF7506;
+}
+
+.cv-icon {
+  margin-right: 4px;
+}
+
+.cv-text {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 150%;
+  color: #211B12;
 }
