--- a/css/style.css
+++ b/css/style.css
@@ -103,3 +103,88 @@ body {
   line-height: 150%;
   color: #211B12;
 }
+
+.section-header {
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 125%;
+  letter-spacing: -0.03em;
+  color: #BF7506;
+}
+
+.cards {
+  display: flex;
+  align-items: flex-start;
+  justify-content: space-between;
+}
+
+.card {
+  max-width: 400px; 
+  margin-bottom: 40px;
+}
+
+.card-text-wrapper {
+  padding: 16px;
+}
+.card-title {
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 135%;
+  letter-spacing: -0.02em;
+  color: #BF7506;
+  margin-top: 0;
+  margin-bottom: 8px;
+}
+
+.tags {
+  list-style-type: none;
+  padding: 0;
+  display: flex;
+  align-items: center;
+  margin-top: 8px;
+  margin-bottom: 16px;
+}
+
+.tag {
+  text-decoration: none;
+  margin-right: 4px;
+  padding: 4px 8px;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 150%;
+  color: #211B12;
+  border: 1px solid #DD9C3C;
+  border-radius: 4px;
+}
+
+.card-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  color: #211B12;
+}
+
+.card-buttons {
+  display: flex;
+  align-items: center;
+}
+
+.card-button {
+  display: flex;
+  align-items: center;
+  margin-right: 25px;
+  padding: 7px 8px;
+  text-decoration: none;
+  border-bottom: 2px solid #BF7506;;
+}
+
+.card-button-icon {
+  margin-right: 4px;
+}
+
+.card-button-text {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 150%;
+  color: #211B12;
+}
