--- a/css/style.css
+++ b/css/style.css
@@ -12,6 +12,7 @@ body {
 }
 
 .navbar {
+  padding-top: 40px;
   margin: 0 auto;
   display: flex;
   align-items: center;
@@ -125,6 +126,9 @@ body {
   max-width: 400px; 
   margin-bottom: 40px;
 }
+.card-image {
+  max-width: 100%;
+}
 
 .card-text-wrapper {
   padding: 16px;
@@ -151,6 +155,7 @@ body {
 .tag {
   text-decoration: none;
   margin-right: 4px;
+  margin-bottom: 4px;
   padding: 4px 8px;
   font-weight: 400;
   font-size: 12px;
@@ -260,7 +265,15 @@ body {
 }
 
 .feedback {
+  position: relative;
   padding: 80px 0 160px;
+}
+
+.feedback-hand {
+  width: 30%;
+  position: absolute;
+  right: 0;
+  top: 12%;
 }
 
 .input-group {
@@ -281,7 +294,7 @@ body {
 }
 
 .input {
-  width: 435px;
+  width: 100%;
   height: 56px;
   border: 3px solid #E0DEDC;
   border-radius: 4px;
@@ -311,4 +324,108 @@ body {
   border-bottom: 2px solid #BF7506;
   background-color: #fff;
   cursor: pointer;
+}
+
+@media (max-width: 1024px) {
+  .container {
+    max-width: 760px;
+  }
+  .card {
+    max-width: 350px;
+  }
+}
+
+@media (max-width: 792px) {
+  .container {
+    max-width: 576px;
+  }
+  .header-photo {
+    max-width: 150px;
+  }
+  .header-strong {
+    font-size: 36px;
+  }
+  .header-geading {
+    font-size: 18px;
+  }
+  .cv-download {
+    margin-left: 15px;
+  }
+  .card {
+    max-width: 45%;
+  }
+  .card-text-wrapper {
+    padding: 8px 0;
+  }
+  .developer {
+    flex-direction: column;
+  }
+  .developer-photo {
+    width: 100%;
+    height: 350px;
+    object-position: top center;
+    margin-bottom: 30px;
+  }
+  .developer-about {
+    margin-left: 0;
+    padding-left: 20px;
+  }
+}
+
+@media (max-width: 600px) {
+  .feedback-hand {
+    display: none;
+  }
+  .container {
+    max-width: 90%;
+  }
+  .navbar {
+    flex-direction: column;
+  }
+  .header {
+    padding-top: 10px;
+    flex-direction: row-reverse;
+  }
+  .header-links, .cards {
+    flex-direction: column;
+  }
+  .cv-download {
+    margin-left: 0;
+  }
+  .cards, .card-button {
+    align-items: center;
+  }
+  .card {
+    max-width: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
+  .card-title {
+    text-align: center;
+  }
+  .card-image {
+    margin: auto;
+  }
+  .tags {
+    flex-wrap: wrap;
+    justify-content: center;
+  }
+}
+
+@media (max-width: 520px) {
+  .header {
+    flex-direction: column;
+    text-align: center;
+  }
+  .form-container {
+    max-width: 90%;
+  }
+  .nav-list {
+    flex-direction: column;
+  }
+  .nav-link {
+    margin-left: 0;
+    margin-bottom: 8px;
+  }
 }
